# source_term_precision

./: .gitignore  LICENSE  README.md  pyproject.toml
src/source_term_precision/: __init__.py  evaluator.py
tests/: test_evaluator.py
