[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "source_term_precision"
version = "0.1.0"
authors = [
  { name="takahiro-hirano67", email="your.email@example.com" },
]
description = "A metric for evaluating LLM hallucination based on Source-based Term Precision."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "sudachipy>=0.6.10",
    "sudachidict-core>=20260116"
]

[project.urls]
"Homepage" = "<https://github.com/takahiro-hirano67/source_term_precision>"